@@ -1949,7 +1949,12 @@ All systems must be contained within the <systemList> tag.-->
 		<emulators>
 			<emulator name="libretro">
                 <cores>
-                    <core default="true">prboom</core>
+                    <core>prboom</core>
+                </cores>
+            </emulator>
+			<emulator name="Chocolate-Doom">
+                <cores>
+                    <core default="true">Chocolate-Doom</core>
                 </cores>
             </emulator>
         </emulators>
