@@ -1,0 +1,126 @@
+video_driver                  ""
+window_position               ""
+fullscreen                    1
+aspect_ratio_correct          1
+integer_scaling               0
+vga_porch_flash               0
+window_width                  800
+window_height                 600
+fullscreen_width              0
+fullscreen_height             0
+force_software_renderer       0
+max_scaling_buffer_pixels     16000000
+startup_delay                 1000
+show_endoom                   1
+show_diskicon                 1
+png_screenshots               0
+snd_samplerate                44100
+snd_cachesize                 67108864
+snd_maxslicetime_ms           28
+snd_pitchshift                0
+snd_musiccmd                  ""
+snd_dmxoption                 ""
+opl_io_port                   0x388
+use_libsamplerate             0
+libsamplerate_scale           0.650000
+autoload_path                 ""
+music_pack_path               "/storage/.local/share/chocolate-doom/music-packs"
+timidity_cfg_path             "/storage/.config/timidity/timidity.cfg"
+gus_patch_path                ""
+gus_ram_kb                    1024
+vanilla_savegame_limit        1
+vanilla_demo_limit            1
+vanilla_keyboard_mapping      1
+player_name                   "EmuELEC Demon"
+grabmouse                     1
+novert                        0
+mouse_acceleration            2.000000
+mouse_threshold               10
+mouseb_strafeleft             -1
+mouseb_straferight            -1
+mouseb_use                    -1
+mouseb_backward               -1
+mouseb_prevweapon             -1
+mouseb_nextweapon             -1
+dclick_use                    1
+joystick_guid                 "050000007e0500000920000001000000"
+joystick_index                0
+joystick_x_axis               131328
+joystick_x_invert             0
+joystick_y_axis               131584
+joystick_y_invert             0
+joystick_strafe_axis          -1
+joystick_strafe_invert        0
+joystick_look_axis            -1
+joystick_look_invert          0
+joystick_physical_button0     0
+joystick_physical_button1     1
+joystick_physical_button2     5
+joystick_physical_button3     4
+joystick_physical_button4     4
+joystick_physical_button5     5
+joystick_physical_button6     6
+joystick_physical_button7     7
+joystick_physical_button8     8
+joystick_physical_button9     9
+joystick_physical_button10    10
+joyb_strafeleft               -1
+joyb_straferight              -1
+joyb_menu_activate            -1
+joyb_toggle_automap           -1
+joyb_prevweapon               -1
+joyb_nextweapon               -1
+key_pause                     69
+key_menu_activate             1
+key_menu_up                   72
+key_menu_down                 80
+key_menu_left                 75
+key_menu_right                77
+key_menu_back                 14
+key_menu_forward              28
+key_menu_confirm              21
+key_menu_abort                49
+key_menu_help                 59
+key_menu_save                 60
+key_menu_load                 61
+key_menu_volume               62
+key_menu_detail               63
+key_menu_qsave                64
+key_menu_endgame              65
+key_menu_messages             66
+key_menu_qload                67
+key_menu_quit                 68
+key_menu_gamma                87
+key_spy                       88
+key_menu_incscreen            13
+key_menu_decscreen            12
+key_menu_screenshot           0
+key_map_toggle                15
+key_map_north                 72
+key_map_south                 80
+key_map_east                  77
+key_map_west                  75
+key_map_zoomin                13
+key_map_zoomout               12
+key_map_maxzoom               11
+key_map_follow                33
+key_map_grid                  34
+key_map_mark                  50
+key_map_clearmark             46
+key_weapon1                   2
+key_weapon2                   3
+key_weapon3                   4
+key_weapon4                   5
+key_weapon5                   6
+key_weapon6                   7
+key_weapon7                   8
+key_weapon8                   9
+key_prevweapon                0
+key_nextweapon                0
+key_message_refresh           28
+key_demo_quit                 16
+key_multi_msg                 20
+key_multi_msgplayer1          34
+key_multi_msgplayer2          23
+key_multi_msgplayer3          48
+key_multi_msgplayer4          19
