@@ -1,0 +1,43 @@
+mouse_sensitivity             5
+sfx_volume                    8
+music_volume                  8
+show_messages                 1
+key_right                     77
+key_left                      75
+key_up                        72
+key_down                      80
+key_strafeleft                51
+key_straferight               52
+key_fire                      29
+key_use                       57
+key_strafe                    56
+key_speed                     54
+use_mouse                     1
+mouseb_fire                   0
+mouseb_strafe                 1
+mouseb_forward                2
+use_joystick                  1
+joyb_fire                     0
+joyb_strafe                   2
+joyb_use                      1
+joyb_speed                    3
+screenblocks                  9
+detaillevel                   0
+snd_channels                  8
+snd_musicdevice               8
+snd_sfxdevice                 3
+snd_sbport                    0
+snd_sbirq                     0
+snd_sbdma                     0
+snd_mport                     0
+usegamma                      0
+chatmacro0                    "No"
+chatmacro1                    "I'm ready to kick butt!"
+chatmacro2                    "I'm OK."
+chatmacro3                    "I'm not looking too good!"
+chatmacro4                    "Help!"
+chatmacro5                    "You suck!"
+chatmacro6                    "Next time, scumbag..."
+chatmacro7                    "Come here!"
+chatmacro8                    "I'll take care of it."
+chatmacro9                    "Yes"
