@@ -1,8 +1,8 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
-# Copyright (C) 2020-present Shanti Gilbert (https://github.com/shantigilbert)
+# Copyright (C) 2021-present Shanti Gilbert (https://github.com/shantigilbert)
 
 PKG_NAME="chocolate-doom"
-PKG_VERSION="b26157aca5b12049b35d8dfcf969c51967a369f6"
+PKG_VERSION="5696aedf508847c67cb0cdecadeca3e9f3296763"
 PKG_REV="1"
 PKG_ARCH="any"
 PKG_LICENSE="GPLv2"
@@ -18,9 +18,15 @@ sed -i "s|./convert-font|$PKG_BUILD/textscreen/fonts/convert-font|g" $PKG_BUILD/
 }
 
 makeinstall_target() {
-  mkdir -p $INSTALL/usr/config/emuelec/bin
+  mkdir -p $INSTALL/usr/bin
   cd $PKG_BUILD
-  cp .$TARGET_NAME/src/chocolate-* $INSTALL/usr/config/emuelec/bin
-  cp .$TARGET_NAME/src/midiread $INSTALL/usr/config/emuelec/bin
-  cp .$TARGET_NAME/src/mus2mid $INSTALL/usr/config/emuelec/bin
+  cp .$TARGET_NAME/src/chocolate-* $INSTALL/usr/bin
+  cp .$TARGET_NAME/src/midiread $INSTALL/usr/bin
+  cp .$TARGET_NAME/src/mus2mid $INSTALL/usr/bin
+  
+  mkdir -p $INSTALL/usr/config/emuelec/configs/chocolate-doom
+  cp $PKG_DIR/config/* $INSTALL/usr/config/emuelec/configs/chocolate-doom
+  
+  mkdir -p $INSTALL/usr/config/emuelec/scripts
+  cp $PKG_DIR/scripts/*  $INSTALL/usr/config/emuelec/scripts
 }
